# label-studio-sdk

./: .fernignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  deploy.py  example.ipynb  interface-cli.md  pyproject.toml  reference.md  requirements.txt  setup.py
.fern/: metadata.json
.github/: autolabeler.yml  pr-title-checker-config.json
.github/workflows/: build_pypi.yml  ci.yml  codeql.yml  docs.yml  fm-command.yml  follow-merge-dispatch.yml  follow-merge-sync-pr-adala.yml  follow-merge-sync-pr-lso.yml  follow-merge-sync-pr.yml  follow-merge-upstream-repo-sync-v2.yml  follow-merge-upstream-repo-sync.yml  gitleaks.yml  jira-command.yml  lint.yml  pr-labeler.yml  release-cut-off-release-branch.yml  release-set-version.yml  slash-command-dispatch.yml  tests.yml  update-draft-release.yml  validator-dependencies.yml  zendesk_issue_commented.yml  zendesk_issue_created.yml  zendesk_task_comment.yml
.mock/: docs.yml  fern.config.json  generators.yml  styles.css
.mock/.definition/: __package__.yml  actions.yml  annotations.yml  api.yml  data.yml  dataManager.yml  export.yml  exportStorage.yml  files.yml  invites.yml  labels.yml  machineLearning.yml  ml.yml  organizations.yml  predictions.yml  projects.yml  storage.yml  storageAzure.yml  storageGcs.yml  storageLocal.yml  storageRedis.yml  storageS3.yml  tasks.yml  users.yml  views.yml  webhooks.yml
.mock/definition/: __package__.yml  actions.yml  activityLog.yml  activityLogs.yml  analytics.yml  annotationHistory.yml  annotationReviews.yml  annotations.yml  api.yml  aws.yml  billing.yml  blueprints.yml  comments.yml  dashboard.yml  dataExplorer.yml  dataManager.yml  datasetStorageAzure.yml  datasetStorageGcs.yml  datasetStorageS3.yml  datasets.yml  exportStorage.yml  export_storage.yml  files.yml  fsm.yml  importStorage.yml  import_storage.yml  invites.yml  jwt.yml  jwtSettings.yml  labels.yml  llm.yml  machineLearning.yml  ml.yml  modelProviderConnection.yml  modelProviders.yml  model_providers.yml  organizations.yml  pauses.yml  predictions.yml  projectRoles.yml  (+20 more)
.mock/openapi/: openapi.yaml  overrides.yaml
docs/: README.md  __init__.py  client.md  examples.md  index.md  project.md  project_exceptions.md  utils.md
docs/pdoc_templates/: config.mako  css.mako  footer.mako  head.mako  html.mako  menu.mako  search.mako
examples/: Active Learning.ipynb  Adding new labels to the project.ipynb  Import data from Cloud Storage.ipynb  Import preannotations.ipynb  README.md  Weak Supervision.ipynb  active_learning.py  adding_new_labels_to_project.ipynb  annotate_data_from_gcs.py  explore_project_stats.py  export_snapshot_with_filters.py  export_snapshots.py  export_with_filters.py  export_yolo_with_images.py  getting_started.ipynb  images.csv  import_preannotations.py  migrate-ls-to-ls.py  taxonomy_label_management.ipynb  view_management.ipynb  weak_supervision.py
examples/active_learning/: active_learning.ipynb  active_learning.py  (+1 more)
fern/: docs.yml  fern.config.json  generators.yml
label_studio_python/: __init__.py  client.py  environment.py
label_studio_sdk/: __init__.py  client.py  config.py  data_manager.py  errors.py  exceptions.py  labels.py  objects.py  project.md  project.py  users.py  utils.py  workspaces.py
label_studio_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pdoc_templates/: config.mako  css.mako  footer.mako  head.mako  html.mako  logo.mako  menu.mako
tests/: configs.py  conftest.py  requirements-test.txt  test_actions.py  test_activity_logs.py  test_aiohttp_autodetect.py  test_annotation_history.py  test_annotation_reviews.py  test_annotations.py  test_billing.py  test_blueprints.py  test_brush_to_coco.py  test_client.py  test_comments.py  test_config.py  test_config_control_tags.py  test_config_lpi.py  test_config_object_tags.py  test_config_region.py  test_data.py  test_data_manager.py  test_export.py  test_export_storage.py  test_files.py  test_import_storage.py  test_invites.py  test_jwt_settings.py  test_labels.py  test_machine_learning.py  test_ml.py  test_model_providers.py  test_organizations.py  test_predictions.py  test_project_templates.py  test_projects.py  test_prompts.py  test_refresh_token.py  test_session_policy.py  test_storage.py  test_storage_azure.py  (+14 more)
tutorials/: assign_users_to_tasks.py  connect_to_ml_backend.ipynb  evaluate_llm_response.ipynb  export_snapshots.py  fastapi_server.py  yolo_predictions.ipynb
(+1579 files in other folders)
